src/test/resources/30/single/opf/invalid/item-properties.opf
<?xml version="1.0" encoding="UTF-8"?>
<package xmlns="http://www.idpf.org/2007/opf" version="3.0" unique-identifier="uid"
    xmlns:dc="http://purl.org/dc/elements/1.1/">
    <metadata>
        <dc:identifier id="uid">xxx</dc:identifier>
        <dc:title>Title</dc:title>
        <dc:language>en</dc:language>
        <meta property="dcterms:modified">2019-01-01T12:00:00Z</meta>
    </metadata>
    <manifest>
        <item id="text001" href="text001.xhtml" properties="nav scripted cover-image" media-type="application/xhtml+xml" />
        <item id="text002" href="text002.xhtml" media-type="application/xhtml+xml" />
        <item id="mo001" href="mo001.smil" properties="remote-resources" media-type="application/smil+xml" />
        <item id="img002" href="image.jpg" media-type="image/jpg" />
        <item id="ncx" href="ncx.ncx" media-type="application/x-dtbncx+xml" />
    </manifest>
    <spine toc="ncx">
        <itemref idref="text001" />
        <itemref idref="text002" />
    </spine>
    <guide>
        <reference href="text001.xhtml" type="cover" title="Cover"/>
    </guide>
</package>
